- [ ] Construct PRs with retroactive continuity.
- [ ] Nit: scrape name pid and change to just id throughout.
- [ ] Audit docs
- [ ] InvokeUnaryHandler: reduce package name noise at the call site by changing to a Do(ctx) method on UnaryInvokeRequest
- [ ] support StreamHandlers in EncodingHandlerSpec

Encodings:
- [x] Drop raw encoding
- [x] Port JSON encoding
- [ ] Port Thrift encoding
- [ ] Port Protobuf encoding
      - [ ] Explore threading the context in Protobuf code generation, i.e. in `Stream.Receive`.

Transports:
- [ ] Port TChannel transport
- [ ] Port or recreate gRPC transport
- [ ] use `req` and `res` as variable names for consistency.
      - [x] HTTP
      - [ ] TChannel
      - [ ] gRPC

To port peer lists forward:
- [ ] Replace functional options with options struct pattern, like net in the
      go standard library and the v2/yarpchttp example.
- [ ] Remove lifecycle.
- [ ] Drop Config and Spec, recreate in yarpcfx.

To port transports forward:
- [ ] Rename Transport to Dialer, implementing yarpc.Dialer.
- [ ] Decouple Inbound and Outbound from Transport. The Dialer gives outbounds
      access to the underlying transport if that's needed to convey disconnect
      messages back.  Inbounds have no need for the dialer.
- [ ] Remove lifecycle.
- [ ] Inbounds should have Addr and Listener properties, favoring the open Listener if given.
- [ ] Outbounds should have URL/Addr, Dialer, and Chooser properties, favoring the Chooser if given.
- [ ] NewSingleOutbound should be removed in favor of Outbound{Dialer, Addr or URL} as an alternative
      to providing a chooser.
- [ ] Start/Stop must accept context, return error.
- [ ] Replace functional options with options struct pattern, like net in the
      go standard library and the v2/yarpchttp example.
- [ ] Transports() method is no longer required.
- [ ] Reduce the Connecting peer connection status to simply Unavailable.