@@ -37,6 +37,7 @@ Encodings:
 - [x] Drop raw encoding
 - [x] Port JSON encoding
 - [ ] Port Thrift encoding
+      - [ ] Revise/Delete comment in `outbound.go#thriftClient.Call`
 - [ ] Port Protobuf encoding
       - [ ] Explore threading the context in Protobuf code generation, i.e. in `Stream.Receive`.
 
